# stepik_eda

./: .gitignore  Diamonds_report.html  README.md  pyproject.toml  stepik.ipynb
