[tool.poetry]
name = "stepik"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=1.16.0,<2.0"
pandas = "^2.0.0"
scikit-learn = "^1.6.1"
catboost = "^1.2.7"
optuna = "^4.2.0"
matplotlib = "^3.5.0"
polars = "^1.21.0"
nbformat = "^5.9.2"  # Добавляем nbformat
plotly = "^5.19.0"   # Добавляем plotly
ipywidgets = "^8.1.1" # Для интерактивных виджетов
jupyter = "^1.0.0"    # Для работы с Jupyter notebooks
pyarrow = "^19.0.0" 
opencv-python = "^4.11.0.86"
python-dotenv = "^1.0.1"
fastexcel = "^0.12.1"
psycopg = "^3.2.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"